--- a/config
+++ b/config
@@ -20,14 +20,11 @@ set $menu wmenu-run
 # output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 #
 # Example configuration:
-#
-   output eDP-1 resolution 1920x1080 position 1680,0
-   output DP-1 resolution 1920x1080 position 0,0
-   output HDMI-A-1 resolution 1920x1080 position 3600,0
+#    
+    output DP-1 resolution 1680x1050 position 0,0
+    output eDP-1 resolution 1920x1080 position 1680,0
+    output HDMI-A-1 resolution 1920x1080 position 3600,0
     
-#   output eDP-1 resolution 1920x1080 position 0,0
-#   output DP-1 resolution 1920x1080 position 1920,0
-
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
 ### Idle configuration
@@ -77,6 +74,9 @@ set $menu wmenu-run
 
     # Start chromium
     bindsym $mod+c exec chromium
+
+    # Start obsidian
+    bindsym $mod+o exec obsidian
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -226,6 +226,7 @@ bar {
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
     # status_command while date +'%Y-%m-%d %X'; do sleep 1; done
+    
     status_command i3status
 
     colors {
