--- a/.config/i3status/i3status.conf
+++ b/.config/i3status/i3status.conf
@@ -6,7 +6,7 @@ general {
 }
 
 order += "wireless wlan0"
-order += "ethernet enp113s0"
+order += "ethernet enp113s0" // eno1
 order += "cpu_temperature 0"
 order += "cpu_usage"
 order += "load"
@@ -20,14 +20,14 @@ wireless wlan0 {
     format_down = "W: down "
 }
 
-ethernet enp113s0 {
+ethernet enp113s0 { // eno1
     format_up = " E: %ip "
     format_down = " E: down "
 }
 
 cpu_temperature 0 {
     format = " %degrees°C "
-    path = "/sys/devices/platform/coretemp.0/hwmon/hwmon7/temp1_input"
+    path = "/sys/devices/platform/coretemp.0/hwmon/hwmon7/temp1_input" // ../hwmon3/temp2_input
 }
 
 cpu_usage {
@@ -54,7 +54,7 @@ battery 1 {
     status_chr = "⚡CHR"
     status_bat = "BAT"
     status_full = "FULL"
-    path = "/sys/class/power_supply/BAT1/uevent"
+    path = "/sys/class/power_supply/BAT1/uevent" // BAT0
     low_threshold = 20
 }
 
