--- a/.config/sway/config
+++ b/.config/sway/config
@@ -21,9 +21,9 @@ set $menu wmenu-run
 #
 # Example configuration:
 #    
-    output DP-1 resolution 1680x1050 position 0,0
-    output eDP-1 resolution 1920x1080 position 1680,0
-    output HDMI-A-1 resolution 1920x1080 position 3600,0
+    #output DP-1 resolution 1920x1080 position 0,0
+    #output eDP-1 resolution 1920x1080 position 0,0
+    #output HDMI-A-1 resolution 1680x1050 position 0,0
     
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
